resources/css/style.css
#header img {
	max-width: 95px;
	height: auto;
}

.container {
	padding-top: 100px;
  padding-bottom: 140px;
}

.navbar-fixed-bottom {
  background-color: #f8f8f8;
}

#demonstration img {
	width:100%;
	height: auto;
  margin-bottom: 20px
}

#right-hand-container {
  margin-top: 130px;
}

@media (max-width: 767px) {
  #right-hand-container{
    margin-top: 0 !important;
  }
  .indexContainer {
    padding-top: 20px;
    padding-bottom: 20px;
  }
}

#login {
	width: 100%;
	border-radius: 10px;
	background-color: #aa764e;
	color: #fff;
	font-size: 1.3em;
}

#login:hover {
	background-color: #ba7658;
}

#submitForgotPass {
	background-color: #aa764e;
	color: #fff;
}

#error-message {
	text-align: center;
	color: darkred;
	font-weight: bold;
}

#submitForgotPass:hover {
	background-color: #ba7658;
}

#login1 {
	width: 100%;
	border-radius: 10px;
	background-color: #aa764e;
	color: #fff;
	font-size: 1.3em;
}

#login1:hover {
	background-color: #ba7658;
}

#FP_link {
	text-align: center;
}

#FP_link button{
	padding-bottom: 10px;
}

#reg-type {
	padding-bottom: 20px;

}

#reg-type button {
	background-color: #fff;
	color:black;
	width:50%;
}

#settings a{
	width:250px;
	height: auto;
}

.dropdown-toggle{
    max-width:80px;
}

.glyphicon-cog, .glyphicon-shopping-cart, .glyphicon-cutlery, .glyphicon-credit-card, .glyphicon-pencil {
	font-size: 30px;
	margin: 0.3em auto 0px;
}

.navbar-right #settings{
	padding-right: 10px;
}

#footerNavBar {
	background-color: #fff;
	padding-top: 10px;
	margin-bottom: 0px;
	margin-top: 10px;
}

.jumbotron h3 {
	text-align: center;
}

.active {
	background-color: grey;
}

#sideNavMenu {
	padding-left: -20px;
	width:250px;
}

#sideNavMenu a {
	font-weight: bold;
}

#buttonIcon {
	font-size: 1.1em;
    transform: scaleX(-1);
}

.btn-add-cart {
	width:100%;
}

#lessSpace {
	padding-top: 0px;
	padding-bottom: 0px;
	margin-top:0px;
	margin-bottom:0px;
}

.thumbnail {
    border: 0 none;
    box-shadow: none;
}

#goToPayment {
	width: 100%;
	border-radius: 10px;
	background-color: #aa764e;
	color: #fff;
	font-size: 1.3em;
}

#goToPayment:hover {
	background-color: #ba7658;
}

#remove-button {
	text-align: right;
	float: right;
	margin-left: 20px;
	margin: right:20px;
}

#order-heading {
	font-size: 1.4em;
	font-weight: bold;
}

.basket-header {
  background-color: #f5f5f5;
}

.dropdown-menu {
    max-height: 400px;
    overflow-y: scroll;
    overflow-x: hidden;
}

#submitChangePermission {
  text-align: center;
  float: center;
  background-color: #aa764e;
  color: #fff;
  width:100%;
}

#submitChangePermission:hover {
  background-color: #ba7658;
}


.jumbotron .table-responsive .table {
	background-color: #fff;
}

#userEmail{
	pointer-events: none;
}

#cancel-order, #complete-order, #finish-order {
	width: 100%;
}

#productInfoDescription {
	padding-bottom: 5px;
}

.icon_gda {
  display: inline-block;
  margin-right: 1px;

  text-align: center;
  color: white;
  font-weight: bold;
  font-size: 0.65em;
  font-family: sans-serif;
}

.icon_gda_bar {
	height: 65px;
	text-align: center;
}

/* applies to the 3 sub elements of a gda */
.icon_gda_elem {
  vertical-align: middle;
  width: 43px;
  border: 1px solid black;
  padding: 2px;
}

/* gda sections */
.icon_gda_top {
  height: 15px;
  margin-bottom: 1px;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}
.icon_gda_mid {
  height: 30px;
  margin-bottom: 1px;
}
.icon_gda_bot {
  height: 15px;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
  position: relative;
  bottom: 0;
}
.icon_gda_text {
  display: inline-block;
  vertical-align: middle;
}

/* gda colouring */
.icon_gda_green {
  background-color: green;
}
.icon_gda_yellow {
  background-color: orange;
}
.icon_gda_red {
  background-color: red;
}
.icon_gda_no_color {
  background-color: grey;
}

.allergen {
	padding-left: 5px;
	margin-bottom: 2px;
	background-color: orange;
	border-radius: 10px;
	width: 100%;
	text-align: left;
}

#productInforNutritional {
	text-align: center;
}

.formrow {
  text-align: right;
  margin-top: 7px;
}

.buttonrow {
  text-align: center;
  margin-top: 7px;
}

.updatedField {
  background-color: #75C731;
}

.someColor {
  background-color: red;
  border-color: red;
  color:pink;
}

#submitAccountChanges {
  border-radius: 10px;
  background-color: #aa764e;
  color: #fff;
  font-size: 1.3em;
}

.indexImage {
  max-height: 550px;
  max-width: 500px;
}

.indexContainer {
  background: #d9531e;
}

#addNewUser, #addNewProduct, #addNewCategory, #delCategory, #addNewCafe, #backToBasket, #backToOrder{
  width: 220px;
  border-radius: 10px;
  background-color: #aa764e;
  color: #fff;
  font-size: 1.3em;
}

.productIMG {
  height: 300px;
}

.productIMGIMG {
  max-height: 130px;
  min-height: 130px;
}

.cafeIMG {
  max-height: 200px;
  min-height: 200px;
}

.cafeWindow {
  height: 320px;
}

#placeTC {
  font-size:1em;
}

@media (max-width: 767px) {
  #header img {
    max-width: 60px;
    height: auto;
  }
}

